<resources>
    <string name="app_name">MediaShare</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="title_activity_login">MediaShare</string>

    <string name="sign_in_tab_indicator">SIGN IN</string>
    <string name="sign_up_tab_indicator">SIGN UP</string>
    <string name="title_activity_signin">Signin</string>
    <string name="title_activity_signup">Signup</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="signup_checkbox_text"><u>I agree to the terms of service</u></string>
    <string name="tag_line">Opening you up to the world of books</string>
    <string name="hello">Hello!</string>
    <string name="welcome">Welcome to&#160;</string>
    <string name="slide_to_discover"><b>TAP HERE TO DISCOVER</b></string>
    <string name="title_activity_dashboard">User Dashboard</string>

    <string name="my_profile">My Account</string>
    <string name="discover_books">Discover Books</string>
    <string name="dictionary">Dictionary</string>
    <string name="read_later">Read Later</string>
    <string name="my_library">My Library</string>
    <string name="admin">Admin</string>
    <string name="title_activity_discover_books">Discover Books</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_best_sellers">Best Sellers</string>
    <string name="title_activity_new_releases">New Releases</string>
    <string name="title_activity_recommended_books">Recommendations</string>
    <string name="title_activity_profile">My Profile</string>

    <string name="title_activity_admin">Add Books</string>
    <string name="view_book_thumbnail"><u>View book thumbnail</u></string>
    <string name="upload_book">Upload Book</string>
    <string name="book_category">Book Category</string>
    <string name="book_author">Book  Author</string>
    <string name="book_price">Book Price (Ksh)</string>
    <string name="book_name">Book Name</string>
    <string name="login">Login</string>
    <string name="title_activity_my_library">My Libraries</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_read_later_list">Read Later List</string>
    <string name="title_activity_book_reader">MS Reader</string>
    <string name="title_activity_dictionary">Dictionary</string>

    <string name="dictionary_search">Dictionary Search</string>
    <string name="no_libraries_found">NO LIBRARIES FOUND</string>
    <string name="add_library">ADD LIBRARY</string>
    <string name="action_add_library">Add Library</string>
    <string name="action_delete_library">Delete Library</string>

</resources>
