<?xml version="1.0" encoding="utf-8"?>
<ke.co.mediashare.mediashare.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#ffffff">

    <Button
        android:id="@+id/btn_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/my_profile"
        android:text="@string/my_profile"/>

    <Button
        android:id="@+id/btn_discover_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/discover_books"
        android:text="@string/discover_books"/>
    <Button
        android:id="@+id/btn_dictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/dictionary"
        android:text="@string/dictionary"/>
    <Button
        android:id="@+id/btn_read_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/read_later"
        android:text="@string/read_later"/>
    <Button
        android:id="@+id/btn_my_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/my_library"
        android:text="@string/my_library"/>
    <Button
        android:id="@+id/btn_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/admin"
        android:text="@string/admin"/>


</ke.co.mediashare.mediashare.DashboardLayout>