<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/label_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/book_name"
            android:textColor="#ff6600"/>

        <EditText
            android:id="@+id/txt_book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="20dp"
            android:theme="@style/EditTextStyle"/>

        <TextView
            android:id="@+id/label_book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/book_price"
            android:textColor="#ff6600"/>

        <EditText
            android:id="@+id/txt_book_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:padding="20dp"
            android:theme="@style/EditTextStyle"/>

        <TextView
            android:id="@+id/label_book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/book_author"
            android:textColor="#ff6600"/>

        <EditText
            android:id="@+id/txt_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="20dp"
            android:theme="@style/EditTextStyle"/>

        <TextView
            android:id="@+id/label_book_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/book_category"
            android:textColor="#ff6600"/>

        <Spinner
            android:id="@+id/books_chooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/books_categories"
            android:padding="20dp"
            android:spinnerMode="dropdown"/>

        <Button
            android:id="@+id/btn_book_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:padding="20dp"
            android:text="@string/upload_book"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/label_book_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/view_book_thumbnail"
            android:textColor="#ff6600"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>