<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ke.co.mediashare.mediashare.SignUpActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_text_first_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_first_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_text_last_name"
        android:layout_below="@+id/edit_text_first_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_last_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edit_text_email_address"
        android:layout_below="@+id/edit_text_last_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_email_address" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_text_password"
        android:layout_below="@+id/edit_text_email_address"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_text_confirm_password"
        android:layout_below="@+id/edit_text_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_confirm_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:id="@+id/btn_create_account"
        android:background="@drawable/button_background"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_below="@+id/edit_text_confirm_password"
        android:layout_alignLeft="@+id/edit_text_confirm_password"
        android:layout_alignStart="@+id/edit_text_confirm_password"
        android:layout_alignRight="@+id/edit_text_confirm_password"
        android:layout_alignEnd="@+id/edit_text_confirm_password" />
</RelativeLayout>
